--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,9 @@
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                        <version>10.0.2</version>
+                           <configuration>
+                                    <failBuildOnCVSS>7</failBuildOnCVSS>
+                           </configuration>
                        <executions>
                            <execution>
                                <goals>
